fixed scrollbar active color

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -15,7 +15,7 @@
 }
 
 ::-webkit-scrollbar-thumb:vertical:active {
-  background: rgb(79, 125, 201);
+  background: #4285F4;
 }
 
 /* ---------------- OTHER ---------------- */
